Changing folder structure a bit

--- a/src/preprocessors/jade/index.jade
+++ b/src/preprocessors/jade/index.jade
@@ -20,4 +20,7 @@ block content
 				|  comes with Autoprefixer, fallbacks for rem unit and CSS3 pseudo-elements, packs same media queries & more... 
 			li 
 				a(href="http://gulpjs.com/", target="_blank") Gulp 
-				| tasks to generate sprites, optimize images, jshint, etc. See gulpfile.js at the root of this project for more information.
+				| tasks to generate sprites, optimize images, jshint, etc. See gulpfile.js at the root of this project for more information. 
+
+		p For full documentation visit the 
+			a(href="https://github.com/anareyna/fronty", target="_blank") Fronty repository.
