Gulp jade working correctly

--- a/src/preprocessors/stylus/_mixins/sprite.styl
+++ b/src/preprocessors/stylus/_mixins/sprite.styl
@@ -11,32 +11,32 @@ $icon_home = x y offset_x offset_y width height total_width total_height image_p
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet = width height image $spritesheet_sprites;
 */
-$number_00_name = 'number_00';
-$number_00_x = 0px;
-$number_00_y = 0px;
-$number_00_offset_x = 0px;
-$number_00_offset_y = 0px;
-$number_00_width = 27px;
-$number_00_height = 27px;
-$number_00_total_width = 56px;
-$number_00_total_height = 27px;
-$number_00_image = '../img/sprite.png';
-$number_00 = 0px 0px 0px 0px 27px 27px 56px 27px '../img/sprite.png' 'number_00';
-$number_01_name = 'number_01';
-$number_01_x = 29px;
-$number_01_y = 0px;
-$number_01_offset_x = -29px;
-$number_01_offset_y = 0px;
-$number_01_width = 27px;
-$number_01_height = 27px;
-$number_01_total_width = 56px;
-$number_01_total_height = 27px;
-$number_01_image = '../img/sprite.png';
-$number_01 = 29px 0px -29px 0px 27px 27px 56px 27px '../img/sprite.png' 'number_01';
+$ico1_name = 'ico1';
+$ico1_x = 0px;
+$ico1_y = 0px;
+$ico1_offset_x = 0px;
+$ico1_offset_y = 0px;
+$ico1_width = 27px;
+$ico1_height = 27px;
+$ico1_total_width = 56px;
+$ico1_total_height = 27px;
+$ico1_image = '../img/sprite.png';
+$ico1 = 0px 0px 0px 0px 27px 27px 56px 27px '../img/sprite.png' 'ico1';
+$ico2_name = 'ico2';
+$ico2_x = 29px;
+$ico2_y = 0px;
+$ico2_offset_x = -29px;
+$ico2_offset_y = 0px;
+$ico2_width = 27px;
+$ico2_height = 27px;
+$ico2_total_width = 56px;
+$ico2_total_height = 27px;
+$ico2_image = '../img/sprite.png';
+$ico2 = 29px 0px -29px 0px 27px 27px 56px 27px '../img/sprite.png' 'ico2';
 $spritesheet_width = 56px;
 $spritesheet_height = 27px;
 $spritesheet_image = '../img/sprite.png';
-$spritesheet_sprites = $number_00 $number_01;
+$spritesheet_sprites = $ico1 $ico2;
 $spritesheet = 56px 27px '../img/sprite.png' $spritesheet_sprites;
 
 /*
