--- a/src/preprocessors/jade/_render/head.jade
+++ b/src/preprocessors/jade/_render/head.jade
@@ -19,8 +19,8 @@ head
     meta(property='og:type', content='#{page.og.type}')
     meta(property='og:url', content='#{page.url}')
 
-    link(href='#{page.static_url}css/layout.css', media='all', rel='stylesheet', type='text/css')
-    link(href='#{page.static_url}css/fonts.css', media='all', rel='stylesheet', type='text/css')
+    link(href='#{page.static_url}css/custom/layout.css', media='all', rel='stylesheet', type='text/css')
+    link(href='#{page.static_url}css/custom/fonts.css', media='all', rel='stylesheet', type='text/css')
 
     link(href='#{page.img_url}logo.png', rel='icon', type='image/vnd.microsoft.icon')
     link(href='#{page.img_url}logo.png', rel='shortcut icon', type='image/vnd.microsoft.icon')
