--- a/src/preprocessors/sass/custom/layout.scss
+++ b/src/preprocessors/sass/custom/layout.scss
@@ -8,9 +8,9 @@
 @import '_mixins/*';
 @import '_normalize/*';
 @import '_helpers/*';
-
 @import '_layouts/*';
-
 .container {
-
+	
+	color: white;
+	background: red;
 }
