--- a/src/preprocessors/stylus/layout.styl
+++ b/src/preprocessors/stylus/layout.styl
@@ -5,16 +5,26 @@
 */
 
 @require '_config/*'
-@require '_mixins/*'
-@require '_normalize/*'
-@require '_helpers/*'
+
 
 @import '_layouts/*'
 
-h1
-	margin 0
-	font-size 2rem
+
 
 .container
 	width $wrapperWidth
 	margin 0 auto
+	
+.c-coupon
+	&__image
+		width 100%
+	&__body
+		padding 1rem
+		background #F3F4F8
+	&__description
+		border-bottom 1px dashed grey
+	&__price
+		color red 
+	&__discount
+		background white
+		border-radius 2rem
