feat(site): Gulp tasks and project structure changes

--- a/patterns/_00-toolbox/css/debug.scss
+++ b/patterns/_00-toolbox/css/debug.scss
@@ -8,11 +8,9 @@
 // 		outline		1px solid rgba(255,0,0,0.2)
 
 // 	// Highlight name spaces
-// 	// [class^="o-"],
-// 	// [class*=" o-"],
 // 	// [class^="e-"],
 // 	// [class*=" e-"]
-// 	// 	outline			2px solid orange !important
+// 	// 	outline			1px solid blue !important
 
 // 	// [class^="c-"],
 // 	// [class*=" c-"]
@@ -20,7 +18,7 @@
 
 // 	// [class^="u-"],
 // 	// [class*=" u-"]
-// 	// 	outline			2px solid violet !important
+// 	// 	outline			2px solid indigo !important
 
 // 	// [class^="--"],
 // 	// [class*="--"]
