--- a/patterns/_00-toolbox/css/variables.scss
+++ b/patterns/_00-toolbox/css/variables.scss
@@ -1,9 +1,7 @@
+//$slicer-breakpoints: 0  400px  600px  800px  1050px; // defaults
+$slicer-breakpoint-names:  'xs' 's' 'm' 'l' 'xl';
+
 /* Colors */
-
-
-$error_color : #FF0000;
-$success_color : #43B77A;
-$warning_color : #FCF8E3;
 
 /* color scheme */
 $brand_color : #2232c3;
@@ -17,6 +15,6 @@ $imgPath       : '../img/';
 $border_radius : 5px;
 
 /* fonts */
-$font_family_primary :  'Lato', 'arial', 'sans-serif';
+$family1:  'Lato', 'arial', 'sans-serif';
 
 $font_path  : '../fonts/';
