--- a/patterns/styles.scss
+++ b/patterns/styles.scss
@@ -1,1 +1,23 @@
 @import "../patterns/**/*.scss";
+@import 'breakpoint';
+@import 'breakpoint-slicer';
+
+body {
+
+	@include at('xs') {
+		background: indigo;
+	}
+	@include at('s') {
+		background: yellow;
+	}
+	@include at('m') {
+		background: blue;
+	}
+	@include at('l') {
+		background: green;
+	}
+	@include at('xl') {
+		background: white;
+	}
+
+}
