feat(site): Estructura

--- a/patterns/_00-toolbox/css/variables.scss
+++ b/patterns/_00-toolbox/css/variables.scss
@@ -9,7 +9,7 @@ $font_color : black;
 
 /**/
 $container_width : 1140px;
-$imgPath       : '../img/';
+$img_path       : '../img/';
 
 /**/
 $border_radius : 5px;
