--- a/patterns/_04-pages/html/index.pug
+++ b/patterns/_04-pages/html/index.pug
@@ -2,4 +2,5 @@ extends ../../_00-toolbox/html/templates/master
 
 block content
 	.l-container
-		p Lorem ipsum s
+		p Lorem ipsum
+		+e-button("Boton")
