--- a/preprocessors/pre_html/index.pug
+++ b/preprocessors/pre_html/index.pug
@@ -3,3 +3,4 @@ extends _templates/master
 block content
 	.l-container
 		p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+		+e-button("sd")
