--- a/patterns/_00-toolbox/html/templates/master.pug
+++ b/patterns/_00-toolbox/html/templates/master.pug
@@ -4,6 +4,8 @@ html(lang="es")
 	include ../partials/head
 	include ../partials/head_scripts
 	include ../mixins/mixins
+	include ../../../_01-elements/html/e-mixins
+	include ../../../_02-components/html/c-mixins
 	body
 		include ../../../_03-layouts/html/l-header
 		block content
