--- a/patterns/_04-pages/html/index.pug
+++ b/patterns/_04-pages/html/index.pug
@@ -4,3 +4,5 @@ block content
 	.l-container
 		p Lorem ipsum
 		+e-button("Boton")
+		a.e-button Link button
+		input.e-button(type="submit" value="boton")
