--- a/assets/icons/_template/icons.scss
+++ b/assets/icons/_template/icons.scss
@@ -1,7 +1,7 @@
 .icon {
 	-webkit-font-smoothing:  antialiased;
 	display:  inline-block;
-	font-family : "iconFonts";
+	font-family : "<%= fontName %>";
 	font-size:  22px;
 	font-style:  normal;
 	font-variant:  normal;
@@ -11,11 +11,8 @@
 	text-transform : none;
 	vertical-align : middle;
 }
-
-.icon_delete:before {
-	content: "\E001";
+<% _.each(glyphs, function(glyph) { %>
+.icon_<%= glyph.name %>:before {
+	content: "\<%= glyph.codepoint.toString(16).toUpperCase() %>";
 }
-
-.icon_pointer:before {
-	content: "\E002";
-}
+<% }); %>
