--- a/src/preprocessors/pug/index.pug
+++ b/src/preprocessors/pug/index.pug
@@ -8,7 +8,7 @@ block content
 			li
 				a(href="http://coffeescript.org/", target="_blank") Coffescript
 			li
-				a(href="http://pugjs.org/", target="_blank") Pug
+				a(href="http://pugjs.org/", target="_blank") Pugaa
 			li
 				a(href="https://learnboost.github.io/stylus/", target="_blank") Stylus
 				|  also uses&nbsp;
@@ -24,3 +24,5 @@ block content
 
 		p For full documentation visit the&nbsp;
 			a(href="https://github.com/anareyna/fronty", target="_blank") Fronty repository.
+			+repeat(2)
+				p aa
