--- a/src/preprocessors/pug/_templates/master.pug
+++ b/src/preprocessors/pug/_templates/master.pug
@@ -2,7 +2,7 @@ include ../_config/page
 include ../_mixins/mixins
 doctype html
 //-+htmlIe()
-html(lang="#{page.lang}", xmlns:og="http://ogp.me/ns#" xmlns:fb="http://ogp.me/ns/fb#")
+html(lang="#{page.lang}", xmlns:ogdd="http://ogp.me/ns#" xmlns:fb="http://ogp.me/ns/fb#")
 		include ../_partials/head
 		block templates
 		body
