--- a/src/preprocessors/pug/index.pug
+++ b/src/preprocessors/pug/index.pug
@@ -3,7 +3,7 @@ extends _templates/master
 
 block content
 	.container
-		p You can now start developing with:
+		p You can now start develoddcccsssffping with:
 		ul
 			li
 				a(href="http://coffeescript.org/", target="_blank") Coffescript
