feat(gulp) inheritance

--- a/src/preprocessors/pug/index.pug
+++ b/src/preprocessors/pug/index.pug
@@ -8,7 +8,7 @@ block content
 			li
 				a(href="http://coffeescript.org/", target="_blank") Coffescript
 			li
-				a(href="http://pugjs.org/", target="_blank") Pugaa
+				a(href="http://pugjs.org/", target="_blank") Pug
 			li
 				a(href="https://learnboost.github.io/stylus/", target="_blank") Stylus
 				|  also uses&nbsp;
@@ -22,7 +22,5 @@ block content
 				a(href="http://gulpjs.com/", target="_blank") Gulp
 				| &nbsp;tasks to generate sprites, optimize images, jshint, etc. See gulpfile.js at the root of this project for more information.
 
-		p For full documentation visit the&nbsp;
+		p For full documentatio5555n sssvisit the&nbsp;
 			a(href="https://github.com/anareyna/fronty", target="_blank") Fronty repository.
-			+repeat(2)
-				p aa
