--- a/src/preprocessors/pug/about.pug
+++ b/src/preprocessors/pug/about.pug
@@ -6,7 +6,7 @@ include _mixins/li
 //- index
 
 block content
-	.containe134fffr
-		h1 Hola Mundoasd
+	.containe134fffrdf
+		h1 Hola Mundoasdrt
 		+chau()
 		+li()
