--- a/src/preprocessors/pug/_mixins/ie.pug
+++ b/src/preprocessors/pug/_mixins/ie.pug
@@ -15,3 +15,6 @@ mixin htmlIe()
     +html('if IE 7', 'ie7')
     +html('if IE 8', 'ie8')
     +html('if IE 9', 'ie9')
+
+mixin chau()
+    p 12456789sdasdssssssswwwwsssdd
