--- a/src/preprocessors/pug/about.pug
+++ b/src/preprocessors/pug/about.pug
@@ -1,6 +1,12 @@
 extends _templates/master
+include _mixins/ie
+include _mixins/li
+//- include _mixins/mixins
+
 //- index
 
 block content
 	.containe134fffr
-		h1 about16
+		h1 Hola Mundoasd
+		+chau()
+		+li()
