--- a/src/preprocessors/pug/contact.pug
+++ b/src/preprocessors/pug/contact.pug
@@ -1,3 +1,5 @@
+//- include _mixins/ie
+
 extends _templates/master
 //- index
 
@@ -6,3 +8,4 @@ block content
 		h1 contact
 		+repeat(4)
 			p fd
+		//- +chau()
