--- a/src/preprocessors/stylus/_helpers/icons.styl
+++ b/src/preprocessors/stylus/_helpers/icons.styl
@@ -12,8 +12,8 @@
 	vertical-align middle
 
 
-.icon_delete:before
+.icon-delete:before
 	content "\E001"
 
-.icon_pointer:before
+.icon-pointer:before
 	content "\E002"
