fix(site): Removing unnecesary styles

--- a/src/preprocessors/pug/index.pug
+++ b/src/preprocessors/pug/index.pug
@@ -6,7 +6,7 @@ block content
 		p You can now start developing with:
 		ul
 			li
-				a(href="http://coffeescript.org/", target="_blank") Coffescript
+				a(href="https://babeljs.io/", target="_blank") JS (ES6) with Babel
 			li
 				a(href="http://pugjs.org/", target="_blank") Pug
 			li
