--- a/src/preprocessors/stylus/_normalize/normalize.styl
+++ b/src/preprocessors/stylus/_normalize/normalize.styl
@@ -6,7 +6,7 @@
  *    user zoom.
  */
 html
-  font-family sans-serif
+  font-family $family1Regular
   -ms-text-size-adjust 100%
   -webkit-text-size-adjust 100%
 
