--- a/src/preprocessors/pug/_partials/head.pug
+++ b/src/preprocessors/pug/_partials/head.pug
@@ -21,6 +21,7 @@ head
 
 	link(href=`${page.static_url}css/layout.css` media='all', rel='stylesheet', type='text/css')
 	link(href=`${page.static_url}css/fonts.css` media='all', rel='stylesheet', type='text/css')
+	//- link(href=`` media='all', rel='stylesheet', type='text/css')
 
 	link(href=`${page.img_url}logo.png`, rel='icon', type='image/vnd.microsoft.icon')
 	link(href=`${page.img_url}logo.png`, rel='shortcut icon', type='image/vnd.microsoft.icon')
