feat(site): Clean site description

--- a/src/preprocessors/pug/_config/page.pug
+++ b/src/preprocessors/pug/_config/page.pug
@@ -2,13 +2,13 @@
 - page.charset         	= 'utf-8'
 - page.lang            	= 'es'
 - page.static_url  	   	= '../../../'
-- page.url  	   	   	= 'http://www.anareyna.com'
+- page.url  	   	   	= ''
 - page.img_url 		   	= page.static_url + 'img/'
-- page.title           	= 'Fronty by Ana Reyna'
-- page.description     	= 'Demo app'
-- page.keywords       	= 'anareyna, demo, playground'
-- page.author         	= 'Ana Reyna'
-- page.name           	= 'Fronty'
+- page.title           	= 'Fronty'
+- page.description     	= ''
+- page.keywords       	= ''
+- page.author         	= ''
+- page.name           	= ''
 - page.viewport       	= 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'
 - page.robots         	= 'index,follow'
 - page.img            	= page.img_url + 'logo.png'
